--- a/static/css/utility.css
+++ b/static/css/utility.css
@@ -423,7 +423,6 @@ html {
 .about-banner {
   width: 100%;
   height: 70vh;
-  /* margin-bottom: 25px; */
 }
 
 .shade {
@@ -448,4 +447,26 @@ html {
 .about-banner-head h4 a {
   text-decoration: none;
   color: #DAA520;
+}
+
+/* breaddccrumb for product page */
+
+.bread-crumb {
+  height: 8vh;
+  background-image: linear-gradient(to bottom right, #060606, #242424, #333333, #333333, #242424, #060606);
+}
+
+.bread-crumb h2 {
+  color: white;
+  font-size: 1rem;
+}
+
+.bread-crumb h2 a {
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.bread-crumb h2 a:hover {
+  color: #FFD700;
 }
